Feat:Creado el jar y añadido al readme el comando para ejecutarlo